# quiz-craft

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  QuizCraft.py  README.md  Requirement_txt_Zoro_Nov_28_2024.txt  app.py  config.ini  docker-compose.yml  generate_quiz_from_prompt.py  hello.py  mcp_config.json  pyproject.toml  requirements.txt  run_with_docker.txt  start_ollama.sh  test_cases_zorawar.py
.devcontainer/: devcontainer.json
.github/workflows/: streamlit.yml  tests.yml
data/: README.md
deployment/: .env.example  cloudflared.conf  cloudflared.conf.example  nginx.conf  nginx.conf.example
docs/: Draw.io link  agile.md  architecture-diagram.md  project_2_automatic_quiz_generation.txt  requirements_engineering.txt  starting_local_app.md  starting_server.txt  useful_commands.txt
scripts/: run.sh
src/: QuizCraft.py  QuizCraft_hosted.py  api.py  cli.py  config_reader.py  generate_quiz_from_prompt.py  generate_quiz_on_file.py  mcp_server.py  quiz_craft.py  rate_limiter.py
streamlit_config/: config.toml
tests/: README.md  Test Case Uploading FIles  Test-Cases for Generating Quizzes from definitions  TestCase#3.md  difficulty_adjustment_tests.py  test-case-6.md  test_api.py  test_cases.txt  test_quiz_craft.py  test_quizcraft.py  test_rate_limiting.py
