[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quizcraft"
version = "1.0.0"
description = "AI-powered quiz generator using local Ollama models — no API keys required"
readme = "README.md"
license = { text = "CC BY-NC-ND 4.0" }
authors = [{ name = "Nima Shafie", email = "nimzshafie@gmail.com" }]
keywords = ["quiz", "ai", "ollama", "llm", "education", "mcp", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.34.2",
    "fpdf2>=2.7.9",
    "pypdf>=6.12.1",
]

[project.optional-dependencies]
# Streamlit web UI
ui = [
    "streamlit>=1.57.0",
]
# REST API server
api = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "slowapi>=0.1.9",
]
# MCP server for Claude Code / Claude Desktop and other AI agents
mcp = [
    "mcp>=1.0.0",
]
# Anthropic Claude backend
anthropic = [
    "anthropic>=0.40.0",
]
# CLI interface
cli = [
    "typer>=0.12.0",
]
# Everything
all = [
    "streamlit>=1.57.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "slowapi>=0.1.9",
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "typer>=0.12.0",
]
# Dev / test
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "bandit>=1.7.9",
]

[project.urls]
Homepage    = "https://quizcraft.shafie.org"
Repository  = "https://github.com/NimaShafie/quiz-craft"
"Bug Tracker" = "https://github.com/NimaShafie/quiz-craft/issues"

[project.scripts]
quizcraft     = "src.cli:app"
quizcraft-api = "src.api:main"
quizcraft-mcp = "src.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.toml", "*.ini", "*.png"]

# ─────────────────────────────────────────────────────────────────────────────
# Tool configuration
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
no_strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/__pycache__/*",
    "src/cli.py",       # CLI entry point — not unit-testable
    "src/mcp_server.py", # MCP server entry point — not unit-testable
]

[tool.coverage.report]
fail_under = 48
show_missing = true
