[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "quizcraft"
version = "1.0.0"
description = "AI-powered quiz generator using local Ollama models — no API keys required"
readme = "README.md"
license = { text = "CC BY-NC-ND 4.0" }
authors = [{ name = "Nima Shafie", email = "nimzshafie@gmail.com" }]
keywords = ["quiz", "ai", "ollama", "llm", "education", "mcp", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Topic :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.34.2",
    "fpdf2>=2.8.7",
    "pypdf>=6.14.2",
]

[project.optional-dependencies]
# Streamlit web UI
ui = [
    "streamlit>=1.58.0",
]
# REST API server
api = [
    "fastapi>=0.138.1",
    "uvicorn[standard]>=0.49.0",
    "slowapi>=0.1.10",
]
# MCP server for Claude Code / Claude Desktop and other AI agents
mcp = [
    "mcp>=1.28.1",
]
# Anthropic Claude backend
anthropic = [
    "anthropic>=0.112.0",
]
# CLI interface
cli = [
    "typer>=0.26.8",
]
# Everything
all = [
    "streamlit>=1.58.0",
    "fastapi>=0.138.1",
    "uvicorn[standard]>=0.49.0",
    "slowapi>=0.1.10",
    "mcp>=1.28.1",
    "anthropic>=0.112.0",
    "typer>=0.26.8",
]
# Dev / test
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "httpx>=0.28.1",
    "fastapi>=0.138.1",
    "uvicorn[standard]>=0.49.0",
    "ruff>=0.15.20",
    "mypy>=2.1.0",
    "bandit>=1.9.4",
]

[project.urls]
Homepage    = "https://quizcraft.shafie.org"
Repository  = "https://github.com/NimaShafie/quiz-craft"
"Bug Tracker" = "https://github.com/NimaShafie/quiz-craft/issues"

[project.scripts]
quizcraft     = "src.cli:app"
quizcraft-api = "src.api:main"
quizcraft-mcp = "src.mcp_server:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools.package-data]
"*" = ["*.toml", "*.ini", "*.png"]

# ─────────────────────────────────────────────────────────────────────────────
# Tool configuration
# ─────────────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
# These files insert sys.path / mock sys.modules between import blocks so that
# local src/ modules resolve before pytest runs.  isort (I001) cannot understand
# that the interleaving is intentional, and the same ordering trips E402
# (module-import-not-at-top); suppress both here rather than scatter noqa
# comments throughout every test file and api.py.
"src/api.py" = ["I001"]
"tests/*.py" = ["I001", "E402"]
# quiz_craft.py embeds large CSS/HTML/SVG string literals for the Streamlit UI
# (e.g. an inline SVG data-URI background that cannot contain newlines), so
# line-length (E501) is not meaningfully enforceable on this file.
"src/quiz_craft.py" = ["E501"]

[tool.mypy]
# 3.12 (within the supported 3.11–3.13 range, and what the CI lint job runs on):
# numpy>=2.5 ships PEP 695 `type` aliases in its stubs that mypy only parses at 3.12+.
python_version = "3.12"
ignore_missing_imports = true
no_strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src"]
omit = [
    "src/__pycache__/*",
    "src/cli.py",       # CLI entry point — not unit-testable
    "src/mcp_server.py", # MCP server entry point — not unit-testable
]

[tool.coverage.report]
fail_under = 48
show_missing = true
